deployment/bankpack-spending.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankpack-spending
  labels:
    app: bankpack-spending
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bankpack-spending-svc
  template:
    metadata:
      labels:
        app: bankpack-spending-svc
    spec:
      containers:
      - name: bankpack-spending
        image: drache0311/bankpack-spending:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
