deployment/bankpack-travel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankpack-travel
  labels:
    app: bankpack-travel
spec:
  replicas: 1
  selector:
    matchLabels:
        app: bankpack-travel-svc
  template:
    metadata:
      labels:
        app: bankpack-travel-svc
    spec:
      containers:
      - name: bankpack-travel
        image: drache0311/bankpack-travel:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
