deployment/sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saju
  labels:
    app: saju
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saju
  template:
    metadata:
      labels:
        app: saju
    spec:
      containers:
      - name: saju
        image: sajupalja/saju:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
