deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bankpack-travel-svc
  labels:
    app: bankpack-travel-svc
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: bankpack-travel-svc
